leptos_macro/tests/view/50_children_wrong_type_and_missing_prop.stderr
error[E0277]: missing required prop `some_prop` on component `Inner`
  --> tests/view/50_children_wrong_type_and_missing_prop.rs:12:14
   |
12 |             <Inner>
   |              ^^^^^ missing prop `some_prop`
   |
   = help: the trait `__required_Inner_some_prop` is not implemented for `()`
   = note: all required props must be provided as attributes on the component
help: the trait `__required_Inner_some_prop` is implemented for `(__T,)`
  --> tests/view/50_children_wrong_type_and_missing_prop.rs:19:1
   |
19 | #[component]
   | ^^^^^^^^^^^^
note: required for `Inner::__PresenceBuilder<((), ((),))>` to implement `Inner::__CheckPresence`
  --> tests/view/50_children_wrong_type_and_missing_prop.rs:19:1
   |
19 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `NotAView` cannot be rendered as a view element
  --> tests/view/50_children_wrong_type_and_missing_prop.rs:13:17
   |
10 | /     view! {
11 | |         <div>
12 | |             <Inner>
13 | |                 {NotAView}
   | |                 ^--------^
   | |                 ||
   | |                 |this tail expression is of type `NotAView`
   | |                 `NotAView` cannot be rendered
14 | |             </Inner>
15 | |         </div>
16 | |     }
   | |_____- required by a bound introduced by this call
   |
help: the trait `FnMut()` is not implemented for `NotAView`
  --> tests/view/50_children_wrong_type_and_missing_prop.rs:6:1
   |
 6 | struct NotAView;
   | ^^^^^^^^^^^^^^^
   = note: types used in views must implement `Render`
   = note: required for `NotAView` to implement `ReactiveFunction`
   = note: required for `NotAView` to implement `leptos::prelude::Render`
   = note: required for `NotAView` to implement `IntoRender`
help: you might have meant to create the closure instead of a block
   |
13 |                 |_| {NotAView}
   |                 +++

error[E0599]: the method `__check_missing` exists for struct `Inner::__PresenceBuilder<((), ((),))>`, but its trait bounds were not satisfied
  --> tests/view/50_children_wrong_type_and_missing_prop.rs:12:14
   |
12 |             <Inner>
   |              ^^^^^
...
19 | #[component]
   | ------------ method `__check_missing` not found for this struct
   |
note: trait bound `(): __required_Inner_some_prop` was not satisfied
  --> tests/view/50_children_wrong_type_and_missing_prop.rs:19:1
   |
19 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
